# churn-analysis

./: .gitignore  README.md  pyproject.toml
data/raw_data/: .gitignore
notebooks/: 00_eda.ipynb  01_feature_engineering.ipynb
src/churn_analysis/: __init__.py  __main__.py
src/churn_analysis/ETL/: extract.py  schemas.py
src/churn_analysis/config/: __init__.py  _variables.py  variables.py
src/churn_analysis/etl/: __init__.py  _extract.py  _load.py  _schemas.py  _transform.py  extract.py  load.py  pipeline.py  schemas.py  transform.py
src/churn_analysis/feature_eng/: __init__.py  _convert_scale_columns.py  _get_dummies_str.py  feature_engineering.py  get_preprocessor.py  split_dataset.py
src/churn_analysis/feature_engineering/: __init__.py  _convert_scale_columns.py  _feature_engineering.py  convert_scale_columns.py  dataset_split.py  drop_columns.py  feature_engineering.py  get_dummies_str.py
src/churn_analysis/models/: __init__.py  _evaluate.py  _optimize.py  _predict.py  _registry.py  _train.py  pipeline.py
src/churn_analysis/utils/: __init__.py  _models.py  _sql.py
