[project]
name = "churn-analysis"
version = "0.1.0"
description = "Patterns analysis and precditions for churn variables."
authors = [
    {name = "Davi Santos"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "notebook (>=7.5.6,<8.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)"
]

[project.scripts]
extract = "churn_analysis.ETL.extract:extraction"



[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv*",
    "__pycache__",
    "build",
    "dist",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["D", "E", "W", "F", "I", "UP", "N", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "SLF001"]
"notebooks/**/*.ipynb" = ["D", "E402", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"