[project]
name = "churn-analysis"
version = "0.1.0"
description = "Patterns analysis and precditions for churn variables."
authors = [
    {name = "Davi Santos"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "notebook (>=7.5.6,<8.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.1.0,<3.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "pandas-stubs (>=3.0.0.260204,<4.0.0.0)"
]

[project.scripts]
extract = "churn_analysis.ETL.extract:extraction"



[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["D", "E", "W", "F", "I", "UP", "N", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D"]
"notebooks/**/*.ipynb" = ["D", "E402", "B"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"