[project]
name = "churn-analysis"
version = "0.1.0"
description = "Patterns analysis and precditions for churn variables."
authors = [
    {name = "Davi Santos"}
]
requires-python = ">=3.12, < 3.13"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "notebook (>=7.6.0,<8.0.0)",
    "matplotlib (>=3.11.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "mlflow (>=3.14.0,<4.0.0)",
    "pandas (<3.0.0)",
    "optuna (>=4.9.0,<5.0.0)",
    "xgboost (>=3.3.0,<4.0.0)",
    "imbalanced-learn (>=0.14.2,<0.15.0)",
    "nbstripout (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=2.3.0,<3.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]

[project.scripts]
extract = "churn_analysis.ETL.extract:extraction"



[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "imblearn.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["D", "E", "W", "F", "I", "UP", "N", "B", "C4", "SIM", "RUF"]
ignore = ["E501", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["D"]
"notebooks/**/*.ipynb" = ["D", "E402", "B"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"